<resources>
    <string name="app_name">Did I? Habit Tracker</string>
    <string name="title_habits">Habits</string>
    <string name="title_progress">Progress</string>
    <string name="menu_settings">Settings</string>
    <string name="did_i">Did I</string>
    <string name="did_i_2">Did I…</string>
    <string name="add_a_habit">add a habit</string>
    <string name="question_mark">\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_habits">Your habit list is empty. Press the pencil icon in the upper right corner to edit your habits!</string>
    <string name="edit_habits">Edit habits</string>
    <string name="enter_habit">enter a new habit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_new">New</string>
    <string name="selected_items">Selected items</string>
    <string name="dialog_edit_habit_title">Did I…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="daily_report">Daily report at</string>
    <string name="edit_no_habits">Add a habit by pressing the + icon in the upper right corner.</string>
    <string name="indicator_description">Indicator which represents a habit question, changes color based on answer of question (green for yes, red for no, grey for unanswered)</string>
    <string name="indicator_progress_description">Indicator which represents a habit question</string>
    <string name="navigation_drawer_open">Opened drawer</string>
    <string name="navigation_drawer_close">Closed drawer</string>
    <string name="habit_tabs_general">General</string>
    <string name="habit_tabs_statistics">Statistics</string>
    <string name="habit_tabs_history">History</string>
    <string name="navigation_drawer_header_title">Did I? Habit Tracker</string>
    <string name="navigation_drawer_header_support_address">support@android4life.ru</string>
    <string name="add_habit_name">Name of habit*</string>
    <string name="add_habit_question">Did I … ?</string>
    <string name="add_habit_name_category">Category</string>
    <string name="add_habit_name_reminder">Remind at</string>
    <string name="add_habit_name_frequency">Frequency</string>
    <string name="add_habit_name_tune">Tune</string>
    <string name="add_habit_name_position">Position</string>
    <string name="add_habit_name_confirmation">Confirmation</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="remove">REMOVE</string>
    <string name="habit_name_should_be_filled">Habit name should be filled</string>
    <string name="habit_name_and_question_should_be_unique">Habit name and question should be unique</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="first_name">Fisrt name</string>
    <string name="username">Username</string>
    <string name="primary_color">Primary color</string>
    <string name="sky_blue">Sky Blue</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="locale_en">en</string>
    <string name="locale_ru">ru</string>
    <string name="russian">Russian</string>
    <string name="select_language">Select language</string>
    <string name="about">About</string>
    <string name="contributors">Contributors</string>
    <string name="notifications">Notifications</string>
    <string name="show_notifications">Silent mode</string>
    <string name="did_i_question">Did I %1$s?</string>
    <string name="on_item_selected">onItemSelected: %1$s</string>
    <string name="habit_schedule_id">habitScheduleId</string>
    <string name="habit_id">habitId</string>
    <string name="habits_location">habitsLocation</string>
    <string name="current_location">currentLocation</string>
    <string name="not_within_set_range">You are currently not within the range set for this habit. Please, move to the required location and try again.</string>
    <string name="enable_location_permission">Location permission for the application is disabled. Please, enable it in the system settings and try again.</string>
    <string name="enable_gps_for_better_precision">GPS is currently disabled on your device. Since positioning via network lacks precision, we recommend you to enable GPS.</string>
    <string name="today_capital_case">TODAY</string>
    <string name="drawerSelectionMode">drawerSelectionMode</string>
    <string name="done_to_skipped_ratio">The percentage of completion</string>
    <string name="accent_color">Accent color</string>
    <string name="color_setting_name_blue">Blue</string>
    <string name="color_setting_name_purple">Purple</string>
    <string name="color_setting_name_red">Red</string>
    <string name="color_setting_name_teal">Teal</string>
    <string name="color_setting_name_blue_id" translatable="false">blue</string>
    <string name="color_setting_name_purple_id" translatable="false">purple</string>
    <string name="color_setting_name_red_id" translatable="false">red</string>
    <string name="color_setting_name_teal_id" translatable="false">teal</string>
    <string name="color_select">Select the color</string>
    <string name="two_subsequent_strings">%1$s%2$s</string>
    <string name="every_month_on_space_string">Every month on %1$s</string>
    <string name="on_every">On every %1$s</string>
    <string name="every_day">Every day</string>
    <string name="zero">0</string>
    <string name="string_colon_space_string">%1$s:%2$s</string>
    <string name="string_colon_space_string_zero">%1$s:0%2$s</string>
    <string name="shared_pref_upper_case">SHARED_PREF</string>
    <string name="position">position</string>
    <string name="notification_sound_name">notificationSoundName</string>
    <string name="standard_from_capital_letter">Standard</string>
    <string name="creating_habit_settings">creating_habit_settings</string>
    <string name="notification_frequency_specified_day_string">notificationFrequencySpecifiedDay%1$s</string>
    <string name="after_string_minutes">"After %1$s minutes"</string>
    <string name="zero_colon_zero_zero">0:00</string>
    <string name="position_format">%1$s and %2$s, range: %3$s m</string>
    <string name="sport">Sport</string>
    <string name="reading">Reading</string>
    <string name="cooking">Cooking</string>
    <string name="cleaning">Cleaning</string>
    <string name="studying">Studying</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_month">Next month</string>
    <string name="all_tasks">Habits</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="specified_days">Specified days</string>
    <string name="select_frequency">Select a frequency</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_days">Select days</string>
    <string name="productivity">Productivity</string>
    <string name="days">Days</string>
    <string name="habit_done">Habit \"%1$s\" was done</string>
    <string name="habit_skip">Habit \"%1$s\" was skipped</string>
    <string name="select_category">Select a category</string>
    <string name="version">Version</string>
    <string name="delete">Delete item?</string>
    <string name="confirm_delete">Yes, delete</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="was_done">Done.</string>
    <string name="was_skipped">Skipped.</string>
    <string name="undo">UNDO</string>
    <string name="standard_tune">Standard</string>
    <string name="none">None</string>
    <string name="after_hour">After 60 minutes</string>
    <string name="perform_future_habit">Hey, do not try to cheat! You can perform only today habits</string>
    <string name="title_activity_maps">Map</string>
    <string name="marker_delete">Delete the marker?</string>
    <string name="delete_marker">Delete marker</string>
    <string name="add_note">Add note</string>
    <string name="habit_was_performed">habit was performed</string>
    <string name="habit_was_performed_and_note">habit was performed. Note: %1$s</string>
    <string name="habit_was_skipped">habit was skipped</string>
    <string name="edit_back">Press back again to cancel editing a habit</string>
    <string name="after_fifteen_minutes">After 15 minutes</string>
    <string name="after_thirty_minutes">After 30 minutes</string>
    <string name="after_sixty_minutes">After one hour</string>
    <string name="after_ninety_minutes">After an hour and a half</string>
    <string name="after_one_hundred_twenty_minutes">After two hours</string>
    <string name="after_one_hundred_fifty_minutes">After two hours and a half</string>
    <string name="disabled">Disabled</string>
    <string name="minutes_to_confirmation_text">minutes_to_confirmation_text</string>
    <string name="array" translatable="false">array</string>
    <string name="minutes_to_confirmation">minutes_to_confirmation</string>
    <string name="confirmation">Confirmation</string>
    <string name="silent_title">Habits with confirmation</string>
    <string name="silent_message">It seems that you have habits with confirmation. After turning on this mode you can confirm habits inside opened application only.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="intro_first_title">Being successful</string>
    <string name="intro_first_desc">The key to professionalism is to have more healthy and life improving habits and no bad habits at all. Our application may help you with that.</string>
    <string name="intro_third_title">Nice to meet you</string>
    <string name="intro_third_desc">You are ready to start managing your habits</string>
    <string name="before_we_start_please_enter_your_first_name">Before we start please enter your first name</string>
    <string name="saving_mode_text">For proper work of the application, it is suggested to turn off battery optimization. Click on the button to turn it off for the application.</string>
    <string name="open_settings">Open settings</string>
    <string name="first_name_title">Change your first name</string>
    <string name="contributors_text">
        <![CDATA[
            Developers<br>
            <b>Aleksandr Nedorezov</b> <br />
            <b>Bulat Mukhutdinov</b> <br />
            <b>Nikolay Yushkevich</b> <br />
            <br />
            Application is using 3rd party libraries, namely:
        ]]>
    </string>
    <string name="define_freepik">Freepik</string>
    <string name="library_freepik_author">Freepik</string>
    <string name="library_freepik_authorWebsite">http://freepik.com</string>
    <string name="library_freepik_libraryName">Freepik</string>
    <string name="library_freepik_libraryDescription">Free vector images</string>
    <string name="library_freepik_libraryWebsite">http://freepik.com</string>
    <string name="library_freepik_libraryVersion">1.0.0</string>
    <string name="library_freepik_isOpenSource">true</string>
    <string name="library_freepik_repositoryLink">http://www.freepik.com/dmca_notification</string>
    <string name="library_freepik_classPath">com.freepik</string>
    <string name="library_freepik_licenseId">cc30</string>
</resources>